syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service ApplicantJobApplication {
 rpc ReadApplicantJobApplication(IdRequestJobApplication) returns (ApplicantJobApplicationPayLoad);
 rpc CreateApplicantJobApplication(ApplicantJobApplicationPayLoad) returns (google.protobuf.Empty);
 rpc UpdateApplicantJobApplication(ApplicantJobApplicationPayLoad) returns (google.protobuf.Empty);
 rpc DeleteApplicantJobApplication(ApplicantJobApplicationPayLoad) returns (google.protobuf.Empty);
}

message IdRequestJobApplication {

     string Id = 1;
}

message ApplicantJobApplicationPayLoad {
     string Id = 1;
     string Applicant = 2;
     string Job = 3;
     google.protobuf.Timestamp ApplicationDate = 4;
}